tests/e2e/semantics/return_type_simple.story
function foo x:int returns string
    if x == 0
        return 0
    else
        return 0
